# zsh-vscodium

./: .babelrc  .bumplus.toml  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .tmuxinator.yml  .todocheck.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Makefile  Pipfile  README.md  README.rst  SECURITY.md  Taskfile.yml  mkdocs.yml  package.json  pyproject.toml  setup.cfg  sonar-project.properties  tsconfig.json  zsh-vscode.zsh  zsh-vscodium.zsh
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .goreleaser.yml  .tflint.hcl  markdown-link-config.json
.github/: FUNDING.yml
.github/linters/: .gitleaks.toml  markdown-link-config.json
.github/workflows/: confluence.yml  lint.yml  publish.yml  sonarqube.yml
conf/: keybinding.json  keybindings.json  settings.json
conf/snippets/: elixir.json  go.json  javascript.json  javascriptreact.json  python.json  rust.json  typescript.json
config/: base.zsh  linux.zsh  main.zsh  osx.zsh
core/: base.zsh  main.zsh
docs/: authors.md  code_of_conduct.md  commands.md  components.md  contributing.md  env-vars.md  faq.md  functions.md  index.md  releasing.md  roadmap.md  testing.md  troubleshooting.md
docs/contribute/: git-flow.md  github-flow.md
docs/examples/: common.md
docs/source/: CONTRIBUTING.rst  RELEASING.rst  SUPPORT.rst
internal/: base.zsh  linux.zsh  main.zsh  osx.zsh
pkg/: base.zsh  helper.zsh  linux.zsh  main.zsh  osx.zsh
provision/diagrams/: Taskfile.yml
provision/docker-compose/: dev.yml  test.yml
provision/task/: git.yml  (+3 more)
tests/: test_config.zunit
(+12 files in other folders)
