[tool.poetry]
name = "zsh-vscodium"
version = "0.1.0"
description = "zsh vscodium"
authors = ["Luis Mayta <luis@hadenlabs.com>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
bridgecrew = "*"
doc8 = "*"
grip = "*"
isort = "*"
mkdocs = "*"
mkdocs-material = "*"
mypy = "*"
parso = "*"
pre-commit = "*"
pycodestyle = "*"
pydocstyle = "*"
pygments = "*"
pylint = "*"
pymdown-extensions = "*"
pytest = ">=6.2.4"
black = "*"
docker-compose = "*"
bumpversion = "*"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material"]

[tool.poetry_bumpversion.file."sonar-project.properties"]
search = 'sonar.projectVersion={current_version}'
replace = 'sonar.projectVersion={new_version}'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
